--- a/DTF/package.json
+++ b/DTF/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "DTF",
+    "name": "sample",
     "version": "0.0.1",
     "author": "Ionic Framework",
     "homepage": "http://ionicframework.com/",
@@ -12,6 +12,7 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
+        "@angular/animations": "^4.2.2",
         "@angular/common": "4.1.2",
         "@angular/compiler": "4.1.2",
         "@angular/compiler-cli": "4.1.2",
@@ -27,11 +28,13 @@
         "cordova-android": "^6.2.3",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.3.0",
         "ionic-plugin-keyboard": "^2.2.1",
+        "ionic2-super-tabs": "^2.6.2",
         "ionicons": "3.0.0",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
@@ -39,8 +42,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.4.0",
-        "@ionic/cli-plugin-ionic-angular": "1.3.1",
+        "@ionic/cli-plugin-cordova": "1.3.0",
+        "@ionic/cli-plugin-ionic-angular": "1.3.0",
         "typescript": "2.3.3"
     },
     "description": "An Ionic project",
@@ -51,7 +54,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android"
